Initial greedy solution